plugins {
    id 'com.android.application'
}

android {
    namespace 'com.example.learninglanguageapp'
    compileSdk 36

    defaultConfig {
        applicationId "com.example.learninglanguageapp"
        minSdk 26
        //noinspection OldTargetApi
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // Room schema export directory
        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField "String", "BASE_URL", '"https://api.yourapp.com/"'
            buildConfigField "boolean", "DEBUG_MODE", "false"
        }
        debug {
            debuggable true
//            applicationIdSuffix ".debug"
            versionNameSuffix "-debug"
            buildConfigField "String", "BASE_URL", '"https://dev-api.yourapp.com/"'
            buildConfigField "boolean", "DEBUG_MODE", "true"
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    buildFeatures {
        viewBinding true
        buildConfig true
    }
}

dependencies {
    // Core Android
    implementation libs.appcompat.v161
    implementation libs.material.v1100
    implementation libs.constraintlayout.v214
    implementation libs.navigation.fragment
    implementation libs.navigation.ui

    // Lifecycle components
    implementation libs.lifecycle.viewmodel
    implementation libs.lifecycle.livedata
    implementation libs.lifecycle.common.java8



    // Room database (Local storage)
    implementation libs.room.ktx
    implementation libs.room.runtime
    implementation libs.room.rxjava2
    implementation libs.annotation
    implementation libs.lifecycle.livedata.ktx
    implementation libs.lifecycle.viewmodel.ktx
    implementation libs.activity
    implementation libs.adapters
    annotationProcessor libs.room.compiler

    // Retrofit for API calls
    implementation libs.retrofit
    implementation libs.converter.gson
    implementation libs.adapter.rxjava2
    implementation libs.logging.interceptor

    // RxJava for async operations
    implementation libs.rxjava
    implementation libs.rxandroid

    // Image loading and caching
    implementation libs.glide
    annotationProcessor libs.compiler

    // Local storage and caching
    implementation libs.disklrucache
    implementation libs.security.crypto

    // RecyclerView and UI components
    implementation libs.recyclerview
    implementation libs.viewpager2
    implementation libs.swiperefreshlayout

    // Work Manager for background tasks
    implementation libs.work.runtime
    implementation libs.work.rxjava2

    // Media player for audio
    implementation libs.exoplayer

    // Permissions
    implementation libs.dexter

    // Progress indicators
    implementation libs.lottie



    // Testing
    testImplementation libs.junit
    testImplementation libs.mockito.core
    testImplementation libs.room.testing
    androidTestImplementation libs.junit.v115
    androidTestImplementation libs.espresso.core.v351
    androidTestImplementation libs.rules


    implementation libs.facebook.android.sdk
    implementation libs.play.services.auth // Google Sign-In



    // ViewPager2
    implementation libs.viewpager2.v110



    // Glide
    implementation libs.glide.v4160
    annotationProcessor libs.compiler

    // CardView
    implementation libs.cardview
    implementation libs.material.v180



    implementation("androidx.appcompat:appcompat:1.6.1")
    implementation("com.google.android.material:material:1.9.0")
    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
// Flexbox Layout cho word chips
    implementation("com.google.android.flexbox:flexbox:3.0.0")

    implementation 'de.hdodenhof:circleimageview:3.1.0'

    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    // Converter JSON (Gson)
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'

    // OkHttp (tùy chọn, để log network)
    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'






}